--- a/index.html
+++ b/index.html
@@ -1,57 +1,61 @@
 <!doctype html>
 <html lang="en-us">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>About | Jeff Romine</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <title>About | Jeff Romine</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-    <body>
+<body>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Jeff Romine</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="index.html" class="navbar-link navbar-link-first">About</a></li>
+      <li><a href="portfolio.html" class="navbar-link">Portfolio</a></li>
+      <li><a href="contact.html" class="navbar-link">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+<div id="main-container" class="container">
+  <div class="row">
+    <section class="main-section col-md-7 col-sm-12">
+      <h1>About Me</h1>
 
-        <header id="masthead">
-            <div class="container">
-                <a href="index.html" id="logo">Jeff Romine</a>
-                <nav>
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="contact.html">Contact</a>
-                </nav>
-            </div>
-        </header>
+      <img src="assets/images/me.jpg" class="auth-image" alt="Your Name">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies sem ut ipsum egestas, at vulputate
+        nulla imperdiet. Aenean mattis lorem neque, nec imperdiet dolor placerat vel.</p>
 
-        <div class="wrapper">
-            <div id="main-container" class="container">
-                <section class="main-section">
-                    <h1>About Me</h1>
+      <p> Aenean tincidunt tincidunt eros id luctus. Proin eget venenatis quam. Ut vel urna risus. Etiam ultrices mollis
+        ipsum quis porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed
+        tempus suscipit leo vitae ultricies.</p>
 
-                    <img src="assets/images/me.jpg" class="auth-image" alt="Your Name">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies sem ut ipsum egestas, at vulputate nulla imperdiet. Aenean mattis lorem neque, nec imperdiet dolor placerat vel.</p>
+    </section>
+    <div class="col-md-1 col-sm-0"></div>
+    <section class="sidebar col-md-4 col-sm-12">
+        <h2>Connect with Me</h2>
+        <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social"
+                                                      alt="GitHub"/></a>
+        <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social"
+                                                              alt="LinkedIn"/></a>
+        <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png"
+                                                                       class="social" alt="Stack Overflow"/></a>
+    </section>
+  </div>
 
-                    <p>  Aenean tincidunt tincidunt eros id luctus. Proin eget venenatis quam. Ut vel urna risus. Etiam ultrices mollis ipsum quis porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed tempus suscipit leo vitae ultricies.</p>
+</div>
 
-                </section>
 
-                <section class="sidebar">
-                    <div id="connect">
-                        <h2>Connect with Me</h2>
-
-                        <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-                        <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-                        <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-                    </div>
-                </section>
-                <div class="push"></div>
-            </div>
-        </div>
-
-        <footer>
-            <div class="container">
-                Copyright &copy; 2016 Jeff Romine
-            </div>
-        </footer>
-    </body>
+<div class="footer navbar-fixed-bottom">
+    Copyright &copy; 2016 Jeff Romine
+</div>
+</body>
 
 </html>
