More bootstrap whack-a-mole.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
 
 <body>
 <nav class="navbar navbar-default">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Jeff Romine</a>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="index.html" class="navbar-link navbar-link-first">About</a></li>
-      <li><a href="portfolio.html" class="navbar-link">Portfolio</a></li>
-      <li><a href="contact.html" class="navbar-link">Contact</a></li>
-    </ul>
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <a class="navbar-brand" href="index.html">Jeff Romine</a>
   </div>
+  <ul class="nav navbar-nav navbar-right">
+    <li><a href="index.html" class="navbar-link navbar-link-first">About</a></li>
+    <li><a href="portfolio.html" class="navbar-link">Portfolio</a></li>
+    <li><a href="contact.html" class="navbar-link">Contact</a></li>
+  </ul>
 </nav>
 <div id="main-container" class="container">
   <div class="row">
-    <section class="main-section col-md-7 col-sm-12">
+    <section class="main-section col-md-8 col-sm-12 col-xs-12">
       <h1>About Me</h1>
 
       <img src="assets/images/me.jpg" class="auth-image" alt="Your Name">
@@ -38,23 +36,20 @@
         tempus suscipit leo vitae ultricies.</p>
 
     </section>
-    <div class="col-md-1 col-sm-0"></div>
     <section class="sidebar col-md-4 col-sm-12">
-        <h2>Connect with Me</h2>
-        <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social"
-                                                      alt="GitHub"/></a>
-        <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social"
-                                                              alt="LinkedIn"/></a>
-        <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png"
-                                                                       class="social" alt="Stack Overflow"/></a>
+      <h2>Connect with Me</h2>
+      <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social"
+                                                    alt="GitHub"/></a>
+      <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social"
+                                                            alt="LinkedIn"/></a>
+      <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png"
+                                                                     class="social" alt="Stack Overflow"/></a>
     </section>
   </div>
-
 </div>
 
-
 <div class="footer navbar-fixed-bottom">
-    Copyright &copy; 2016 Jeff Romine
+  Copyright &copy; 2016 Jeff Romine
 </div>
 </body>
 
