--- a/contact.html
+++ b/contact.html
@@ -3,65 +3,64 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Jeff Romine</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <title>About | Jeff Romine</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Jeff Romine</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
-  <div class="wrapper">
-      <div id="main-container" class="container">
-          <section class="main-section">
-              <h1>Contact</h1>
-
-              <form id="contact-form">
-                  <ul>
-                      <li>
-                          <label for="name">Name</label>
-                          <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-                      </li>
-                      <li>
-                          <label for="email">Email</label>
-                          <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-                      </li>
-                      <li>
-                          <label for="message">Message</label>
-                          <textarea id="message" name="message" required="required"></textarea>
-                      </li>
-                  </ul>
-                  <input type="submit">
-              </form>
-
-          </section>
-
-          <section class="sidebar">
-              <div id="connect">
-                  <h2>Connect with Me</h2>
-                  <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-                  <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-                  <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-              </div>
-          </section>
-          <div class="push"></div>
-      </div>
+<nav class="navbar navbar-default">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <a class="navbar-brand" href="index.html">Jeff Romine</a>
   </div>
+  <ul class="nav navbar-nav navbar-right">
+    <li><a href="index.html" class="navbar-link navbar-link-first">About</a></li>
+    <li><a href="portfolio.html" class="navbar-link">Portfolio</a></li>
+    <li><a href="contact.html" class="navbar-link">Contact</a></li>
+  </ul>
+</nav>
+<div id="main-container" class="container">
+  <div class="row">
+    <section class="main-section col-md-8 col-sm-12 col-xs-12">
+      <h1>Contact</h1>
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit" class="button">
+      </form>
 
-  <footer>
-    <div class="container">
-      Copyright &copy; 2016 Jeff Romine
-    </div>
-  </footer>
+    </section>
+    <section class="sidebar col-md-4 col-sm-12">
+      <h2>Connect with Me</h2>
+      <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social"
+                                                    alt="GitHub"/></a>
+      <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social"
+                                                            alt="LinkedIn"/></a>
+      <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png"
+                                                                     class="social" alt="Stack Overflow"/></a>
+    </section>
+  </div>
+</div>
+
+<div class="footer navbar-fixed-bottom">
+  Copyright &copy; 2016 Jeff Romine
+</div>
 </body>
 
 </html>
+
