--- a/portfolio.html
+++ b/portfolio.html
@@ -1,76 +1,75 @@
 <!doctype html>
 <html lang="en-us">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Portfolio | Jeff Romine</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <title>About | Jeff Romine</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-    <body>
+<body>
+<nav class="navbar navbar-default">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <a class="navbar-brand" href="index.html">Jeff Romine</a>
+  </div>
+  <ul class="nav navbar-nav navbar-right">
+    <li><a href="index.html" class="navbar-link navbar-link-first">About</a></li>
+    <li><a href="portfolio.html" class="navbar-link">Portfolio</a></li>
+    <li><a href="contact.html" class="navbar-link">Contact</a></li>
+  </ul>
+</nav>
+  <div id="main-container" class="container">
+    <div class="row">
+    <section class="main-section col-md-8 col-sm-12 col-xs-12">
+      <h1>Portfolio</h1>
 
-        <header id="masthead">
-            <div class="container">
-                <a href="index.html" id="logo">Jeff Romine</a>
-                <nav>
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="contact.html">Contact</a>
-                </nav>
-            </div>
-        </header>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
 
-        <div class="wrapper">
-            <div id="main-container" class="container">
-                <section class="main-section">
-                    <h1>Portfolio</h1>
+        <h3>Hangman</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
-                    <div class="work">
-                        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
-                        <h3>Hangman</h3>
-                    </div>
-                    <div class="work">
-                        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-                        <h3>RPG Game</h3>
-                    </div>
-                    <div class="work">
-                        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-                        <h3>Trivia Game</h3>
-                    </div>
-                    <div class="work">
-                        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <h3>Rock Paper Scissors</h3>
+      </div>
 
-                        <h3>Rutgers Info Widget</h3>
-                    </div>
-                    <div class="work">
-                        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+    </section>
 
-                        <h3>Rock Paper Scissors</h3>
-                    </div>
+    <section class="sidebar col-md-4 col-sm-12">
+        <h2>Connect with Me</h2>
+        <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social"
+                                                      alt="GitHub"/></a>
+        <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social"
+                                                              alt="LinkedIn"/></a>
+        <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png"
+                                                                       class="social" alt="Stack Overflow"/></a>
+    </section>
+    </div>
+  </div>
 
-                </section>
-
-                <section class="sidebar">
-                    <div id="connect">
-                        <h2>Connect with Me</h2>
-                        <a href="https://github.com/jeff-romine"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-                        <a href="https://www.linkedin.com/in/jeffromine"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-                        <a href="https://stackoverflow.com/users/2532732/jromine"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-                    </div>
-                </section>
-                <div class="push"></div>
-            </div>
-        </div>
-
-        <footer>
-            <div class="container">
-                Copyright &copy; 2016 Jeff Romine
-            </div>
-        </footer>
-    </body>
+<div class="footer navbar-fixed-bottom">
+  Copyright &copy; 2016 Jeff Romine
+</div>
+</body>
 
 </html>
